# hw_22_2

./: .gitignore  blog.json  blogs.html  cars.json  contacts.json  data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
cars/: admin.py  forms.py  models.py  urls.py  views.py
cars/management/commands/: fill.py
cars/migrations/: 0001_initial.py  0002_version.py  0003_alter_version_options.py  0004_alter_version_sign.py  0005_alter_version_car_alter_version_number.py  0006_rename_car_version_vers.py  0007_rename_vers_version_version.py  0008_alter_version_name_alter_version_number_and_more.py  0009_alter_version_number.py  0010_alter_version_number.py  0011_rename_version_version_product.py  0012_product_owner.py  0013_alter_product_owner.py
cars/templates/cars/: car.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
cars/templates/cars/includes/: inc_footer.html  inc_menu.html
config/: settings.py  urls.py
contacts/: admin.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: contact_confirm_delete.html  contact_detail.html  contact_form.html  contact_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: reset_password.html  user_form.html
