[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["ZAA <zaa.1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.24.0"
pytils = "^0.4.1"
django-phonenumber-field = "^8.0.0"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
